test/Dialect/LLZK/column_field_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA1 {
    // expected-note@+1 {{field defined here}}
    llzk.field @f1 : !felt.felt

    function.def @constrain(%self: !llzk.struct<@ComponentA1>) { function.return }
    function.def @compute() -> !llzk.struct<@ComponentA1> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA1>
      function.return %self : !llzk.struct<@ComponentA1>
    }
  }

  llzk.struct @ComponentA2 {
    function.def @compute(%p: !llzk.struct<@ComponentA1>) -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      // expected-error@+1 {{'llzk.readf' op cannot read with table offset from a field that is not a column}}
      %r = llzk.readf %p[@f1] : !llzk.struct<@ComponentA1>, !felt.felt {tableOffset = -1 : index}
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>, %p: !llzk.struct<@ComponentA1>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA2 {
    // expected-error@+1 {{'llzk.field' op marked as column can only contain felts, arrays of column types, or structs with columns, but field has type '!string.string'}}
    llzk.field @f1 : !string.string {column}
    function.def @compute() -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA2 {
    // expected-error@+1 {{'llzk.field' op marked as column can only contain felts, arrays of column types, or structs with columns, but field has type 'index'}}
    llzk.field @f1 : index {column}
    function.def @compute() -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA2 {
    // expected-error@+1 {{'llzk.field' op marked as column can only contain felts, arrays of column types, or structs with columns, but field has type 'i1'}}
    llzk.field @f1 : i1 {column}
    function.def @compute() -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA2 {
    // expected-error@+1 {{'llzk.field' op marked as column can only contain felts, arrays of column types, or structs with columns, but field has type '!array.array<2 x !string.string>'}}
    llzk.field @f1 : !array.array<2 x !string.string> {column}
    function.def @compute() -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA2 {
    // expected-error@+1 {{'llzk.field' op marked as column can only contain felts, arrays of column types, or structs with columns, but field has type '!array.array<2 x index>'}}
    llzk.field @f1 : !array.array<2 x index> {column}
    function.def @compute() -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @ComponentA1 {
    // Even if the struct's field is of felt type, it is not marked as a column.
    llzk.field @f1 : !felt.felt

    function.def @constrain(%self: !llzk.struct<@ComponentA1>) { function.return }
    function.def @compute() -> !llzk.struct<@ComponentA1> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA1>
      function.return %self : !llzk.struct<@ComponentA1>
    }
  }

  llzk.struct @ComponentA2 {
    // expected-error@+1 {{'llzk.field' op marked as column can only contain felts, arrays of column types, or structs with columns, but field has type '!llzk.struct<@ComponentA1>'}}
    llzk.field @c1 : !llzk.struct<@ComponentA1> {column}
    function.def @compute() -> !llzk.struct<@ComponentA2> {
      %self = llzk.new_struct : !llzk.struct<@ComponentA2>
      function.return %self : !llzk.struct<@ComponentA2>
    }

    function.def @constrain(%self: !llzk.struct<@ComponentA2>) {
      function.return
    }
  }
}

